fixed stretching issue, need to make mobile usable

--- a/css/main.scss
+++ b/css/main.scss
@@ -163,8 +163,9 @@ div.text_description {
 }
 
 .project_image {
+    position:relative;
     margin-top: 30px;
-    width: 20%;
+    width: 250px;
     height: 150px;
     display: inline-block;
     vertical-align:top;
